# ecifp

./: .gitignore  README.md  conf.ini  pyproject.toml
ecifp/: __init__.py  fp_sim.py  utils.py
nbs/: binding_mode_similarity.ipynb  binding_site_identification.ipynb  binding_site_similarity.ipynb  generate_binding_site_fp.ipynb  generate_ecifp.ipynb
