[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecifp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distinctipy>=1.3.4",
    "jupyter>=1.1.1",
    "llvmlite==0.45.1",
    "matplotlib>=3.10.8",
    "molviewspec>=1.8.1",
    "numba==0.62.1",
    "pandas>=3.0.0",
    "pdbeccdutils>=1.0.0",
    "pyarrow>=23.0.1",
    "pyminimax>=0.1.2",
    "scikit-learn>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecifp*"]
